crates/warp-taper-core/src/snapshots/warp_taper_core__bundle__tests__readme_minimal.snap
---
source: crates/warp-taper-core/src/bundle.rs
expression: render_readme(&inputs)
---
# Tape: MCP log rotation kicks in at the size cap

**Branch / head:** `main` @ `abc1234`  
**Recorded:** 2026-05-14T04:12:07Z  
**Evaluation:** `pass`

---

_Generated by [warp-taper](https://github.com/david-engelmann/warp-taper)._
