crates/warp-taper-core/src/snapshots/warp_taper_core__bundle__tests__readme_with_artifacts.snap
---
source: crates/warp-taper-core/src/bundle.rs
expression: render_readme(&inputs)
---
# Tape: MCP log rotation kicks in at the size cap

**Ticket:** warpdotdev/warp#10874  
**Branch / head:** `david/advanced-log-rotation-poc` @ `1f41ac3a`  
**Recorded:** 2026-05-14T04:12:07Z  
**Evaluation:** `pass`

## Expected behavior

An MCP server's log rotates after the size threshold is crossed.
No error toasts during rotation.

## Artifacts

- [master.mov](master.mov) — screen recording
- patches/ — named stills:
    - [01-before.png](patches/01-before.png)
    - [02-after.png](patches/02-after.png)
- [logs/warp-oss.session.log](logs/warp-oss.session.log) — 48213 bytes of warp-oss.log captured during the session
- logs/mcp/ — MCP server logs at end of session:
    - [0d6c1e2a-mcp.log](logs/mcp/0d6c1e2a-mcp.log)
    - [0d6c1e2a-mcp.log.1](logs/mcp/0d6c1e2a-mcp.log.1)

---

_Generated by [warp-taper](https://github.com/david-engelmann/warp-taper)._
